<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="product"
            type="tech.bawano.mobiledevtest.models.Product" />
    </data>

    <LinearLayout
        android:id="@+id/cv_topic_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="24dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:cardBackgroundColor="@color/grey_light"
            app:cardCornerRadius="5dp">

            <ImageView
                android:id="@+id/productImage"
                setImage="@{product.url}"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="6dp" />

        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="end"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/productPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{product.currentValue}"
                android:textColor="@color/grey"
                android:textSize="12sp"
                app:fontFamily="@font/roboto_bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/bookmark"
                tools:text="price" />

            <ImageView
                android:id="@+id/bookmark"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_unbookmarked"
                setBookmarked = "@{product.isSaved}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/productName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@{product.name}"
            android:textColor="@color/grey"
            android:textSize="11sp"
            tools:text="name" />


    </LinearLayout>
</layout>