<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_products">

    <fragment
        android:id="@+id/nav_products"
        android:name="tech.bawano.mobiledevtest.ui.products.ProductsFragment"
        android:label="Products"
        tools:layout="@layout/fragment_products" />

    <fragment
        android:id="@+id/nav_product_details"
        android:name="tech.bawano.mobiledevtest.ui.details.ProductDetailsFragment"
        android:label="Details"
        tools:layout="@layout/fragment_product_details" >
        <argument
            android:name="id"
            app:argType="integer" />
    </fragment>
</navigation>